fixed overflow style

--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
 
 html, body {
-    height: 100%;
     margin: 0;
 }
 
